--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
-<h1>Sobre a Barbearia Alura</h1>
+<!DOCTYPE html>
+<html lang="pt-br">
+  <meta charset="utf-8">
+   <head>
 
- <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+<title>Barbearia rhilaryluara</title>
+<h1>Sobre a Barbearia RhilaryLuara</h1>
 
- <p><em><strong>Nossa missão é: "Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em></p>
+    </head>
+    <body>
 
- <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+    <p>Localizada no coração da cidade a <strong>Barbearia RhilaryLuara</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+
+  <p style="font-size:20<px"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong></em>.</p>
+
+    <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p> 
+
+    </body>
+  
+</html>
