--- a/index.html
+++ b/index.html
@@ -3,15 +3,26 @@
   <meta charset="utf-8">
    <head>
 
-<title>Barbearia rhilaryluara</title>
-<h1>Sobre a Barbearia RhilaryLuara</h1>
+     <title>Barbearia rhilaryluara</title>
+      <h1 style="style="text-align:center"">Sobre a Barbearia RhilaryLuara</h1>
+         <link rel= stylesheet" href="atyle.css">
 
-    </head>
-    <body>
 
-    <p>Localizada no coração da cidade a <strong>Barbearia RhilaryLuara</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
-  <p style="font-size:20<px"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong></em>.</p>
+
+    </style>
+   p{
+        text-align:center
+          }
+
+     </style>
+       
+        </head>
+     <body>
+
+          <p>Localizada no coração da cidade a <strong>Barbearia RhilaryLuara</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+
+  <p style="font-size:20px; "><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong></em>.</p>
 
     <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p> 
 
